--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Coding Temple</title>
     </head>
     <body>
         <header>
@@ -32,15 +33,15 @@
             <p>Our current cohort consists of students from various backgrounds and knowledge about the IT industry.</p>
             <a href="students.html">View more on our students...</a>
         </article>
-        
+        <br>
+        <hr>
+        <br>
         <footer>
           <nav class="menu">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="courses.html">Courses</a></li>
-                        <li><a href="students.html">Students</a></li>
-                        <li><a href="apply.html">Apply Now</a></li>
-                    </ul>
+                        <a href="index.html">Home</a>
+                        <a href="courses.html">Courses</a>
+                        <a href="students.html">Students</a>
+                        <a href="apply.html">Apply Now</a>
                 </nav>
         </footer>
         
